fix linter and upgrade linting, fix units
